force-app/main/default/objects/Account_Visit__c/Account_Visit__c.object-meta.xml
<CustomObject>
    <label>Customer  Visit</label>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer  Visit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>