force-app/main/default/objects/Account_Visit__c/fields/Amount_of_new_order_generated__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_new_order_generated__c</fullName>
    <label>Amount of new order generated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>