force-app/main/default/objects/Account_Visit__c/fields/Amount_of_order_in_negotiation__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_order_in_negotiation__c</fullName>
    <label>Amount of order in negotiation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>