force-app/main/default/objects/Account_Visit__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Visit Attendees/Positions</label>
    <type>TextArea</type>
</CustomField>