force-app/main/default/objects/Account_Visit__c/fields/Company_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Company_Dynamics__c</fullName>
    <inlineHelpText>Compras del mes - stock
Purpose of the activity</inlineHelpText>
    <label>Company Dynamics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>