force-app/main/default/objects/Account_Visit__c/fields/Conclusions_Of_The_Visit__c.field-meta.xml
<CustomField>
    <fullName>Conclusions_Of_The_Visit__c</fullName>
    <label>Conclusions Of The Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>