force-app/main/default/objects/Account_Visit__c/fields/Costumer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Costumer_Feedback__c</fullName>
    <label>Costumer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>