force-app/main/default/objects/Account_Visit__c/fields/Crop_Progress_Stage__c.field-meta.xml
<CustomField>
    <fullName>Crop_Progress_Stage__c</fullName>
    <label>Crop Progress(Stage)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>