force-app/main/default/objects/Account_Visit__c/fields/Customer_New_Business_pportunities__c.field-meta.xml
<CustomField>
    <fullName>Customer_New_Business_pportunities__c</fullName>
    <label>Customer New Business Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>