force-app/main/default/objects/Account_Visit__c/fields/Customer_Sales_Market_Updates__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Market_Updates__c</fullName>
    <label>Customer Sales &amp;Market Updates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>