force-app/main/default/objects/Account_Visit__c/fields/Customer_Visit_Conclusions__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit_Conclusions__c</fullName>
    <label>Customer Visit Conclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>