force-app/main/default/objects/Account_Visit__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <formula>TEXT(DAY(Datevalue(CreatedDate) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <type>Text</type>
</CustomField>