force-app/main/default/objects/Account_Visit__c/fields/External_Minutes__c.field-meta.xml
<CustomField>
    <fullName>External_Minutes__c</fullName>
    <label>External Minutes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>