force-app/main/default/objects/Account_Visit__c/fields/Key_Issue_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Key_Issue_Next_Step__c</fullName>
    <label>Key Issue &amp; Next Step &amp; HQ Support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>