force-app/main/default/objects/Account_Visit__c/fields/Main_Crops__c.field-meta.xml
<CustomField>
    <fullName>Main_Crops__c</fullName>
    <label>Main Crops</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>