force-app/main/default/objects/Account_Visit__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>CASESAFEID(Owner:User.ManagerId)</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>