force-app/main/default/objects/Account_Visit__c/fields/Market_Dynamics_Competitor_Industry__c.field-meta.xml
<CustomField>
    <fullName>Market_Dynamics_Competitor_Industry__c</fullName>
    <inlineHelpText>informacion de los competidores
portfolio/products you use the most</inlineHelpText>
    <label>Market Dynamics (Competitor, Industry)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>