force-app/main/default/objects/Account_Visit__c/fields/Market_Information_Communication__c.field-meta.xml
<CustomField>
    <fullName>Market_Information_Communication__c</fullName>
    <label>Market Information Communication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>