force-app/main/default/objects/Account_Visit__c/fields/Meeting_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Arrangement__c</fullName>
    <label>Meeting Arrangement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>