force-app/main/default/objects/Account_Visit__c/fields/Nutriens_Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Nutriens_Current_Situation__c</fullName>
    <label>Nutriens Current Situation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>