force-app/main/default/objects/Account_Visit__c/fields/Opportunity_volume_or_value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_volume_or_value__c</fullName>
    <label>Opportunity (volume or value)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>