force-app/main/default/objects/Account_Visit__c/fields/Other_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Other_Purpose__c</fullName>
    <label>Other Purpose Specifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>