force-app/main/default/objects/Account_Visit__c/fields/Our_Cooperation_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Our_Cooperation_Opportunities__c</fullName>
    <label>Our Cooperation Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>