force-app/main/default/objects/Account_Visit__c/fields/Purpose_Of_The_Test__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Of_The_Test__c</fullName>
    <label>Purpose Of The Test</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>