force-app/main/default/objects/Account_Visit__c/fields/Registration_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Registration_Opportunities__c</fullName>
    <label>Registration Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>