force-app/main/default/objects/Account_Visit__c/fields/Sales_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Sales_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Forecast</label>
    <referenceTo>Sales_Forecast_Summary__c</referenceTo>
    <relationshipLabel>Customer Visit</relationshipLabel>
    <relationshipName>Customer_Visit_Sales_Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>