force-app/main/default/objects/Account_Visit__c/fields/Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity__c</fullName>
    <label>Sales Opportunity(AGT Portfolio)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>