force-app/main/default/objects/Account_Visit__c/fields/Summary_And_Plan_For_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Summary_And_Plan_For_Next_Step__c</fullName>
    <label>Summary And Plan For Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>