force-app/main/default/objects/Account_Visit__c/fields/Support_Needed_From_Company__c.field-meta.xml
<CustomField>
    <fullName>Support_Needed_From_Company__c</fullName>
    <label>Support Needed From Company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>