force-app/main/default/objects/Account_Visit__c/fields/Support_needed_from_HQ__c.field-meta.xml
<CustomField>
    <fullName>Support_needed_from_HQ__c</fullName>
    <label>Support needed from HQ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>