force-app/main/default/objects/Account_Visit__c/fields/Test_Will_Be_Carried_Out__c.field-meta.xml
<CustomField>
    <fullName>Test_Will_Be_Carried_Out__c</fullName>
    <inlineHelpText>yes/no Which product</inlineHelpText>
    <label>Test Will Be Carried Out</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>