force-app/main/default/objects/Account_Visit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Office visit</fullName>
            </value>
            <value>
                <fullName>Customer visit</fullName>
            </value>
            <value>
                <fullName>Telephone/online conference</fullName>
            </value>
            <value>
                <fullName>Meal reception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>