force-app/main/default/objects/Account_Visit__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <label>Travel Schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>