force-app/main/default/objects/Account_Visit__c/fields/Visit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Visit_Purpose__c</fullName>
    <label>Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance-Collection follow-up</fullName>
            </value>
            <value>
                <fullName>Sales-Order Negotiation</fullName>
            </value>
            <value>
                <fullName>Strategic Cooperation</fullName>
            </value>
            <value>
                <fullName>Regular Visit</fullName>
            </value>
            <value>
                <fullName>Institutional Visit</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Technical Assistance/Claims</fullName>
            </value>
            <value>
                <fullName>Faciliate Distributor to Sell</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>