force-app/main/default/objects/Account_Visit__c/recordTypes/Manufacturers_Distributors.recordType-meta.xml
<RecordType>
    <fullName>Manufacturers_Distributors</fullName>
    <active>true</active>
    <label>Manufacturers/Distributors</label>
</RecordType>