force-app/main/default/objects/Account_Visit__c/validationRules/CustomerReq.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerReq</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
TEXT(Customer_Type__c)=&apos;Trading&apos;,
ISBLANK(Customer__c)
),

AND(
TEXT(Customer_Type__c)=&apos;NO Trading&apos;,
ISBLANK(Customer_Name__c)
)
)</errorConditionFormula>
    <errorMessage>The Customer Search is Required when customer type is trading.
The Customer is Required when customer type is no trading.</errorMessage>
</ValidationRule>