force-app/main/default/objects/Account_Visit__c/validationRules/Esc_Purpose_Vertify.validationRule-meta.xml
<ValidationRule>
    <fullName>Esc_Purpose_Vertify</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Other_Purpose__c),INCLUDES(Visit_Purpose__c,&apos;Others&apos;))</errorConditionFormula>
    <errorDisplayField>Other_Purpose__c</errorDisplayField>
    <errorMessage>Please input Other Purpose Specifications.</errorMessage>
</ValidationRule>