force-app/main/default/objects/Account_Visit__c/validationRules/Esc_Reason_Vertify.validationRule-meta.xml
<ValidationRule>
    <fullName>Esc_Reason_Vertify</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Cancel_Reason__c),TEXT(Visit_Status__c)==&apos;Cancelled&apos;)</errorConditionFormula>
    <errorDisplayField>Cancel_Reason__c</errorDisplayField>
    <errorMessage>Please input the cancel reason.</errorMessage>
</ValidationRule>