force-app/main/default/objects/Account_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Customer__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Start_Date__c</columns>
    <columns>Finish_Date__c</columns>
    <columns>Visit_Status__c</columns>
    <columns>Cancel_Reason__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>3020</value>
    </filters>
    <label>All</label>
</ListView>