force-app/main/default/objects/Account_Visit__c/listViews/AR_Rainbow_C.listView-meta.xml
<ListView>
    <fullName>AR_Rainbow_C</fullName>
    <columns>NAME</columns>
    <columns>Agenda__c</columns>
    <columns>Visit_Purpose__c</columns>
    <columns>Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Finish_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Visit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>5130</value>
    </filters>
    <label>AR Agroterrum C</label>
    <sharedTo>
        <group>X5030</group>
    </sharedTo>
</ListView>