force-app/main/default/objects/Account_Visit__c/listViews/MX_Agroterrum_C.listView-meta.xml
<ListView>
    <fullName>MX_Agroterrum_C</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Type__c</columns>
    <columns>Visit_Purpose__c</columns>
    <columns>Agenda__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Finish_Date__c</columns>
    <columns>Visit_Status__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer_Visit_Conclusions__c</columns>
    <columns>Support_Needed_From_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>3020</value>
    </filters>
    <label>MX Agroterrum C</label>
    <sharedTo>
        <group>X3020</group>
        <role>Mexico_Area_Head</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
    </sharedTo>
</ListView>